.tanzu/config/k8sGatewayConfig.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: johnnyplatform-spring-sensor-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: johnnyplatform-spring-sensor
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-johnnyplatform-spring-sensor
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: johnnyplatform-spring-sensor
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
